@@ -39,13 +39,13 @@ test udp_1.3 {close udp socket} {
 
 test udp-1.4 {udp_open on assigned port} {
     list [catch {
-        set port 53530
+        set port 0xf0b0
         set s [udp_open $port]
         set check [udp_conf $s -myport]
         close $s
-        expr {$port == $check}
+        format 0x%04x $check
     } msg] $msg
-} {0 1}
+} {0 0xf0b0}
 
 test udp-1.5 {udp_conf -remote before seting remote details} {
     list [catch {
@@ -64,6 +64,36 @@ test udp-1.6 {udp_conf -peer before setting remote details} {
         set r
     } msg] $msg
 } {0 {}}
+
+
+test udp-2.0 {udp_conf using service name} {
+    list [catch {
+        set s [udp_open]
+        udp_conf $s localhost ntp
+        set r [udp_conf $s -remote]
+        close $s
+        set r} msg] $msg
+} {0 {localhost 123}}
+
+test udp-2.1 {udp_conf using service number} {
+    list [catch {
+        set s [udp_open]
+        udp_conf $s localhost 123
+        set r [udp_conf $s -remote]
+        close $s
+        set r} msg] $msg
+} {0 {localhost 123}}
+
+test udp-2.2 {udp_open on named port} {
+    list [catch {
+        set port ntp
+        set s [udp_open $port]
+        set check [udp_conf $s -myport]
+        close $s
+        format 0x%04x $check
+    } msg] $msg
+} {0 0x007b}
+
 
 # -------------------------------------------------------------------------
 # cleanup
